# quickcheck-monoid-subclasses

./: CHANGELOG.md  README.md  Test-QuickCheck-Classes-Monoid-Factorial.html  Test-QuickCheck-Classes-Monoid-GCD.html  Test-QuickCheck-Classes-Monoid-LCM.html  Test-QuickCheck-Classes-Monoid-Monus.html  Test-QuickCheck-Classes-Monoid-Null.html  Test-QuickCheck-Classes-Semigroup-Cancellative.html  Test-QuickCheck-Classes-Semigroup-Factorial.html  Test-QuickCheck-Classes-Semigroup.html  cabal.project  doc-index.html  doc-index.json  index.html  qcms.cabal  quickcheck-classes-monoid-subclasses.cabal  quickcheck-classes-monoid-subclasses.haddock  quickcheck-classes-semigroup.haddock  quickcheck-monoid-subclasses.cabal  quickcheck-monoid-subclasses.haddock
.github/workflows/: build.yml
src/: Test.QuickCheck.Classes.Monoid.Factorial.html  Test.QuickCheck.Classes.Monoid.GCD.html  Test.QuickCheck.Classes.Monoid.LCM.html  Test.QuickCheck.Classes.Monoid.Monus.html  Test.QuickCheck.Classes.Monoid.Null.html  Test.QuickCheck.Classes.Semigroup.Cancellative.html  Test.QuickCheck.Classes.Semigroup.Factorial.html  Test.QuickCheck.Classes.Semigroup.html
src/internal/: Internal.hs
src/internal/Internal/Semigroup/: Eq.hs  Tuple.hs
src/internal/Test/QuickCheck/Classes/Semigroup/: Internal.hs  Tuple.hs
src/prelude/Internal/: Prelude.hs
src/public/Test/QuickCheck/Classes/Monoid/: Factorial.hs  GCD.hs  LCM.hs  Monus.hs  Null.hs
src/public/Test/QuickCheck/Classes/Monoid/GCD/: Distributive.hs
src/public/Test/QuickCheck/Classes/Monoid/LCM/: Distributive.hs
src/public/Test/QuickCheck/Classes/Semigroup/: Cancellative.hs  Factorial.hs
src/quickcheck-classes-monoid-subclasses-prelude/Test/QuickCheck/Classes/Semigroup/: Prelude.hs
src/quickcheck-classes-monoid-subclasses-test/Test/QuickCheck/Classes/: SemigroupSpec.hs
src/quickcheck-classes-monoid-subclasses/Test/QuickCheck/Classes/Monoid/: GCD.hs  Null.hs
src/quickcheck-monoid-subclasses-prelude/Test/QuickCheck/Classes/Semigroup/: Prelude.hs
src/quickcheck-monoid-subclasses-test/Test/QuickCheck/Classes/: SemigroupSpec.hs
src/quickcheck-monoid-subclasses/Test/QuickCheck/Classes/: Semigroup.hs
src/quickcheck-monoid-subclasses/Test/QuickCheck/Classes/Monoid/: Monus.hs
src/quickcheck-monoid-subclasses/Test/QuickCheck/Classes/Semigroup/: Cancellative.hs
src/test/: ClassSpec.hs
src/test/Test/Hspec/: Laws.hs
src/test/Test/QuickCheck/Classes/: SemigroupSpec.hs
