cabal-version:  3.0
name:           quickcheck-classes-monoid-subclasses
version:        0.0.0
bug-reports:    https://github.com/jonathanknowles/quickcheck-classes-monoid-subclasses/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022 Jonathan Knowles
category:       Testing
synopsis:       QuickCheck support for testing instances of classes defined in
                the monoid-subclasses library.
description:

    This library provides:

    * QuickCheck support for testing instances of classes defined in the
      'monoid-subclasses' library.
    * Reusable properties in the form of 'Laws' definitions.

extra-source-files:
    README.md

common common-extensions
    default-extensions:
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        PolyKinds
        ScopedTypeVariables
        TypeApplications
        ViewPatterns

source-repository head
    type: git
    location: https://github.com/jonathanknowles/quickcheck-classes-monoid-subclasses

library
    import:
        common-extensions
    hs-source-dirs:
        src/quickcheck-classes-monoid-subclasses
    exposed-modules:
        Test.QuickCheck.Classes.Monoid.GCD
        Test.QuickCheck.Classes.Monoid.Monus
        Test.QuickCheck.Classes.Monoid.Null
        Test.QuickCheck.Classes.Semigroup.Cancellative
    default-language:
        Haskell2010
    build-depends:
        base >=4.7 && <5
      , monoid-subclasses
      , QuickCheck
      , quickcheck-classes
      , quickcheck-classes-monoid-subclasses-internal

library quickcheck-classes-monoid-subclasses-internal
    import:
        common-extensions
    hs-source-dirs:
        src/quickcheck-classes-monoid-subclasses-internal
    exposed-modules:
        Data.Semigroup.Eq
        Test.QuickCheck.Classes.Semigroup.Internal
        Test.QuickCheck.Classes.Semigroup.Tuple
    default-language:
        Haskell2010
    build-depends:
        base >=4.7 && <5
      , QuickCheck
      , pretty-show
      , semigroupoids

library quickcheck-classes-monoid-subclasses-prelude
    import:
        common-extensions
    hs-source-dirs:
        src/quickcheck-classes-monoid-subclasses-prelude
    exposed-modules:
        Test.QuickCheck.Classes.Semigroup.Prelude
    default-language:
        Haskell2010
    build-depends:
        base >=4.7 && <5
      , containers
      , monoid-subclasses
      , QuickCheck
      , quickcheck-classes-monoid-subclasses
      , quickcheck-classes-monoid-subclasses-internal
      , quickcheck-instances

test-suite quickcheck-classes-monoid-subclasses-test
    import:
        common-extensions
    main-is:
        Spec.hs
    hs-source-dirs:
        src/quickcheck-classes-monoid-subclasses-test
    other-modules:
        Test.QuickCheck.Classes.Hspec
        Test.QuickCheck.Classes.SemigroupSpec
    type: exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
    build-depends:
        base >=4.7 && <5
      , bytestring
      , containers
      , hspec
      , monoid-subclasses
      , QuickCheck
      , quickcheck-classes
      , quickcheck-classes-monoid-subclasses
      , quickcheck-instances
      , text
      , vector
