cabal-version:  3.0
name:           quickcheck-monoid-subclasses
version:        0.0.0
bug-reports:    https://github.com/jonathanknowles/quickcheck-monoid-subclasses/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022 Jonathan Knowles
category:       Testing
synopsis:       QuickCheck support for testing instances of classes defined in
                the monoid-subclasses library.
description:

    This library provides:

    * QuickCheck support for testing instances of classes defined in the
      'monoid-subclasses' library.
    * Reusable properties in the form of 'Laws' definitions.

extra-source-files:
    README.md

common common-extensions
    default-extensions:
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        PolyKinds
        ScopedTypeVariables
        TypeApplications
        ViewPatterns

source-repository head
    type: git
    location: https://github.com/jonathanknowles/quickcheck-monoid-subclasses

library
    import:
        common-extensions
    hs-source-dirs:
        src/public
    exposed-modules:
        Test.QuickCheck.Classes.Monoid.GCD
        Test.QuickCheck.Classes.Monoid.Monus
        Test.QuickCheck.Classes.Monoid.Null
        Test.QuickCheck.Classes.Semigroup.Cancellative
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , monoid-subclasses >= 1.2.1
      , QuickCheck
      , quickcheck-classes
      , quickcheck-monoid-subclasses:internal

library internal
    import:
        common-extensions
    hs-source-dirs:
        src/internal
    exposed-modules:
        Internal
        Internal.Semigroup.Eq
        Internal.Semigroup.Tuple
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , pretty-show
      , QuickCheck
      , semigroupoids

library prelude
    import:
        common-extensions
    hs-source-dirs:
        src/prelude
    exposed-modules:
        Internal.Prelude
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , containers
      , monoid-subclasses >= 1.2.1
      , QuickCheck
      , quickcheck-instances
      , quickcheck-monoid-subclasses
      , quickcheck-monoid-subclasses:internal

test-suite test
    import:
        common-extensions
    ghc-options:
        -threaded -with-rtsopts=-N
    main-is:
        Spec.hs
    hs-source-dirs:
        src/test
    other-modules:
        SpecHook
        Test.Hspec.Laws
        Test.QuickCheck.Classes.SemigroupSpec
    type:
        exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
    build-depends:
      , base >=4.7 && <5
      , bytestring
      , containers
      , hspec
      , monoid-subclasses >= 1.2.1
      , QuickCheck
      , quickcheck-classes
      , quickcheck-instances
      , quickcheck-monoid-subclasses
      , text
      , vector
