cabal-version:  3.0
name:           quickcheck-monoid-subclasses
version:        0.0.0
bug-reports:    https://github.com/jonathanknowles/quickcheck-monoid-subclasses/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022 Jonathan Knowles
category:       Testing
synopsis:       QuickCheck support for testing instances of classes defined in
                the monoid-subclasses library.
description:

    This library provides:

    * QuickCheck support for testing instances of classes defined in the
      'monoid-subclasses' library.
    * Reusable properties in the form of 'Laws' definitions.

extra-source-files:
    README.md

common dependency-base
    build-depends:base
common dependency-bytestring
    build-depends:bytestring
common dependency-containers
    build-depends:containers
common dependency-hspec
    build-depends:hspec
common dependency-monoid-subclasses
    build-depends:monoid-subclasses
common dependency-pretty-show
    build-depends:pretty-show
common dependency-QuickCheck
    build-depends:QuickCheck
common dependency-quickcheck-classes
    build-depends:quickcheck-classes
common dependency-quickcheck-instances
    build-depends:quickcheck-instances
common dependency-semigroupoids
    build-depends:semigroupoids
common dependency-text
    build-depends:text
common dependency-vector
    build-depends:vector

common extensions
    default-extensions:
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        PolyKinds
        ScopedTypeVariables
        TypeApplications
        ViewPatterns

source-repository head
    type: git
    location: https://github.com/jonathanknowles/quickcheck-monoid-subclasses

library
    import:
      , dependency-base
      , dependency-monoid-subclasses
      , dependency-QuickCheck
      , dependency-quickcheck-classes
      , extensions
    build-depends:
      , quickcheck-monoid-subclasses:internal
    default-language:
        Haskell2010
    hs-source-dirs:
        src/public
    exposed-modules:
        Test.QuickCheck.Classes.Monoid.GCD
        Test.QuickCheck.Classes.Monoid.Monus
        Test.QuickCheck.Classes.Monoid.Null
        Test.QuickCheck.Classes.Semigroup.Cancellative

library internal
    import:
      , dependency-base
      , dependency-pretty-show
      , dependency-QuickCheck
      , dependency-semigroupoids
      , extensions
    default-language:
        Haskell2010
    hs-source-dirs:
        src/internal
    exposed-modules:
        Internal
        Internal.Semigroup.Eq
        Internal.Semigroup.Tuple

library prelude
    import:
      , dependency-base
      , dependency-containers
      , dependency-monoid-subclasses
      , dependency-QuickCheck
      , dependency-quickcheck-instances
      , extensions
    build-depends:
      , quickcheck-monoid-subclasses
      , quickcheck-monoid-subclasses:internal
    default-language:
        Haskell2010
    hs-source-dirs:
        src/prelude
    exposed-modules:
        Internal.Prelude

test-suite test
    import:
      , dependency-base
      , dependency-bytestring
      , dependency-containers
      , dependency-hspec
      , dependency-monoid-subclasses
      , dependency-QuickCheck
      , dependency-quickcheck-classes
      , dependency-quickcheck-instances
      , dependency-text
      , dependency-vector
      , extensions
    build-depends:
      , quickcheck-monoid-subclasses
    default-language:
        Haskell2010
    ghc-options:
        -threaded -with-rtsopts=-N
    main-is:
        Spec.hs
    hs-source-dirs:
        src/test
    other-modules:
        SpecHook
        Test.Hspec.Laws
        Test.QuickCheck.Classes.SemigroupSpec
    type:
        exitcode-stdio-1.0
    build-tool-depends:
        hspec-discover:hspec-discover == 2.*
